# autorootlib

./: INSTALL  Makefile.am  Makefile.am.in  README  configure.ac  root_libs.mk
include/: DerivedRootClass.h  LinkDef.h  SimpleRootClass.h
m4/: create_rootlib_makefile_am.m4
src/: DerivedRootClass.cpp  SimpleRootClass.cpp
